Bug 1656285 - libmar: Avoid clobbering ftello() and fseeko() declarations in MinGW's stdio.h. r=mhowell

Include stdio.h before redefining ftello and fseeko to avoid clobbering the ftello() and fseeko() function declarations in MinGW's stdio.h.

I don't know why my change to compile libmar as C11 (bug 1653182) caused this ftello/fseeko problem. From my inspection of MinGW's stdio.h, this problem should have already been happening!

Differential Revision: https://phabricator.services.mozilla.com/D85665