modules/libmar/src/mar_private.h
@@ -54,6 +54,9 @@ static_assert(sizeof(BLOCKSIZE) < (SIGNATURE_BLOCK_OFFSET + sizeof(uint32_t)),
    instead of the NSPR equivalents. */
 #ifdef XP_WIN
 #  include <winsock2.h>
+/* Include stdio.h before redefining ftello and fseeko to avoid clobbering
+ * the ftello() and fseeko() function declarations in MinGW's stdio.h. */
+#  include <stdio.h>
 #  ifdef __MINGW32__
 /* Avoid MinGW's _ftelli64() and _fseeki64() implementations because they
  * are unreliable. */
@@ -67,9 +70,8 @@ static_assert(sizeof(BLOCKSIZE) < (SIGNATURE_BLOCK_OFFSET + sizeof(uint32_t)),
 #  define _FILE_OFFSET_BITS 64
 #  include <netinet/in.h>
 #  include <unistd.h>
+#  include <stdio.h>
 #endif
-
-#include <stdio.h>
 
 #define HOST_TO_NETWORK64(x)                                               \
   (((((uint64_t)x) & 0xFF) << 56) | ((((uint64_t)x) >> 8) & 0xFF) << 48) | \
